--- a/docs/03-features/017-pwa.md
+++ b/docs/03-features/017-pwa.md
@@ -5,11 +5,12 @@ title: PWA (Progressive Web App)
 
 ## Introduction
 
-`tramvai` provides complete support for [Progressive Web Apps](https://web.dev/progressive-web-apps/) (PWA) features. 
+`tramvai` provides complete support for [Progressive Web Apps](https://web.dev/progressive-web-apps/) (PWA) features.
 
 Main PWA features separated into a few modules:
-- [Workbox](#workbox) 
-- [Webmanifest](#webmanifest) 
+
+- [Workbox](#workbox)
+- [Webmanifest](#webmanifest)
 - [Meta](#meta)
 - [Icons](#icons)
 
@@ -25,7 +26,7 @@ Main purpose of `InjectManifest` integration is to inject information about appl
 
 Service Worker generation process is integrated with `@tramvai/cli` development server. It means that you don't need always to run `build` command to generate SW, but this behavior is configurable.
 
-For production build, SW will be generated in client build directory with other assets. If you have enabled [modern build](how-to/how-enable-modern.md), then SW will be generated for  both modern (with `.modern.js` suffix) and legacy bundles.
+For production build, SW will be generated in client build directory with other assets. If you have enabled [modern build](how-to/how-enable-modern.md), then SW will be generated for both modern (with `.modern.js` suffix) and legacy bundles.
 
 ### Webmanifest
 
@@ -437,6 +438,7 @@ npx tramvai add @tramvai/pwa-recipes
 Application may have a lot of static assets - JS and CSS files. Optimal solution for PWA is to cache this assets at runtime instead of precache all assets on application startup, and precache only critical assets.
 
 Recipe `cacheApplicationStaticAssets` works like this:
+
 - cache all `.js` and `.css` files at runtime with passed `strategy` option (default is [stale while revalidate](https://developer.chrome.com/docs/workbox/modules/workbox-strategies/#stale-while-revalidate) strategy)
 - limit cache size and ttl with `maxEntries` and `maxAgeSeconds` options
 - cache only `200` or opaque responses
@@ -465,6 +467,7 @@ cacheApplicationStaticAssets({ precacheManifest });
 #### Cache images
 
 Recipe `cacheApplicationImages` works like this:
+
 - cache all `.png, .jpg, .jpeg, .webp, .avif, .svg` files runtime with passed `strategy` option (default is [stale while revalidate](https://developer.chrome.com/docs/workbox/modules/workbox-strategies/#stale-while-revalidate) strategy)
 - limit cache size and ttl with `maxEntries` and `maxAgeSeconds` options
 - cache only `200` or opaque responses
@@ -487,6 +490,7 @@ cacheApplicationImages({ precacheManifest });
 #### Cache fonts
 
 Recipe `cacheApplicationFonts` works like this:
+
 - cache all `.woff, .woff2, .otf, .ttf` files runtime with passed `strategy` option (default is [stale while revalidate](https://developer.chrome.com/docs/workbox/modules/workbox-strategies/#stale-while-revalidate) strategy)
 - limit cache size and ttl with `maxEntries` and `maxAgeSeconds` options
 - cache only `200` or opaque responses
@@ -509,6 +513,7 @@ cacheApplicationFonts({ precacheManifest });
 #### Cache pages
 
 Recipe `cacheApplicationPages` works like this:
+
 - cache all HTML pages in runtime, started with `pwa.sw.scope` parameter from `tramvai.json`, with passed `strategy` option (default is [network first](https://developer.chrome.com/docs/workbox/modules/workbox-strategies/#network-first-network-falling-back-to-cache) strategy)
 - with timeout for network request provided in `networkTimeoutSeconds` option
 - limit cache size and ttl with `maxEntries` and `maxAgeSeconds` options
@@ -530,6 +535,61 @@ cacheApplicationPages({ precacheManifest });
 ```
 
 ## How to
+
+### How to use custom service worker or webmanifest file
+
+Sometimes you may want to register your own custom service worker or webmanifest. In this case you will need `TramvaiPwaLightModule`.
+
+```ts
+import { createApp } from '@tramvai/core';
+import { TramvaiPwaLightModule } from '@tramvai/module-progressive-web-app';
+
+createApp({
+  name: 'tincoin',
+  modules: [TramvaiPwaLightModule],
+  providers: [
+    provide({
+      provide: PWA_SW_URL_TOKEN,
+      useValue: '/sw.js',
+    }),
+    provide({
+      provide: PWA_MANIFEST_URL_TOKEN,
+      useValue: '/manifest.webmanifest',
+    }),
+  ],
+});
+```
+
+For local development put your service worker to `/public` folder or use `ServerModule` to request proxying. Example:
+
+```ts
+import { createApp } from '@tramvai/core';
+import { TramvaiPwaLightModule } from '@tramvai/module-progressive-web-app';
+import { ServerModule } from '@tramvai/module-server';
+
+createApp({
+  name: 'tincoin',
+  modules: [TramvaiPwaLightModule, ServerModule],
+  providers: [
+    provide({
+      provide: PWA_SW_URL_TOKEN,
+      useValue: '/sw.js',
+    }),
+    ...(process.env.NODE_ENV === 'development'
+      ? [
+          provide({
+            provide: PROXY_CONFIG_TOKEN,
+            scope: Scope.SINGLETON,
+            useValue: {
+              context: ['/sw.js', '/manifest.webmanifest'],
+              target: 'https://cdn.example.com',
+            },
+          }),
+        ]
+      : []),
+  ],
+});
+```
 
 ### How to send messages to Service Worker?
 
@@ -612,7 +672,7 @@ You can use `experiments.pwa.workbox.include` option to precache webmanifest and
 {
   "experiments": {
     "pwa": {
-    "workbox": {
+      "workbox": {
         "include": [
           // react framework chunk
           "react\\.([\\w\\d]+?\\.)?js$",
