--- a/docs/03-features/013-seo.md
+++ b/docs/03-features/013-seo.md
@@ -18,17 +18,20 @@ Meta tags in `tramvai` application represented as a `key: value` object, where k
 ### Data sources
 
 Meta tags will be generated per every page request, and based on different data sources:
+
 - [Default meta pack](#default-meta), static and will be used for all pages
 - [Meta from route configuration](#route-meta), static and will be used for specific route
 - [Custom data source](#custom-data-source), when you need to get data from different places (services, stores, etc.)
 - [Dynamic meta](#dynamic-meta), can be changed in [Actions](03-features/09-data-fetching/01-action.md) or [CommandLineRunner steps](03-features/06-app-lifecycle.md)
+- [JSON-LD](#jsonld), sets up only for server requests
 
 ### Meta priority
 
 There is a three predefined priority levels, and you can always use custom:
+
 - `0` - used for [default meta](#default-meta), available in constant `META_PRIORITY_DEFAULT`
 - `10` - used for [meta from route config](#route-meta), available in constant `META_PRIORITY_ROUTE`
-- `20` - highest priority, intended for custom usage in application, usually for [dynamic meta](#dynamic-meta), available in constant `META_PRIORITY_APP` 
+- `20` - highest priority, intended for custom usage in application, usually for [dynamic meta](#dynamic-meta), available in constant `META_PRIORITY_APP`
 
 ## Usage
 
@@ -67,7 +70,7 @@ createApp({
       metaDefault: {
         title: 'Tramvai application',
       },
-    })
+    }),
   ],
 });
 ```
@@ -124,7 +127,7 @@ const route = {
       },
     },
   },
-}
+};
 ```
 
 ### Custom data source
@@ -134,7 +137,6 @@ You can set additional data source by using the method `SeoModule.forRoot` with 
 Each source is a function that takes a meta and allows you to extend the meta through a `updateMeta` call. The priority is a positive number, for each specific meta key the value with the highest priority will be used, the value with priority `0` denotes the default value.
 
 This meta update will be executed for every request for application pages. Possible use-case - read information for meta from some services or stores (this information need to be already fetched, meta updaters are syncronyous).
-
 
 ```tsx
 import { createApp } from '@tramvai/core';
@@ -151,7 +153,7 @@ createApp({
           });
         },
       ],
-    })
+    }),
   ],
 });
 ```
@@ -201,6 +203,56 @@ declareAction({
   },
 });
 ```
+
+### JSON-LD
+
+It's possible to set up `JSON-LD` for your routes. You can learn more about this technology [here](https://json-ld.org/learn.html).  
+There are two ways to set it up:
+
+- use static `seo` property of the [page component](03-features/03-pages.md)
+
+```tsx
+import type { PageComponent } from '@tramvai/react';
+
+const CommentsPage: PageComponent = () => <h1>Comments Page</h1>;
+
+CommentsPage.seo = {
+  meta: {
+    structuredData: {
+      jsonLd: {
+        '@context': 'http://schema.org/',
+        '@type': 'Comments',
+      },
+    },
+  },
+};
+
+export default CommentsPage;
+```
+
+- use route configuration with [manually created routes](03-features/03-pages.md#define-routes-manually)
+
+```tsx
+const route = {
+  name: 'comments',
+  path: '/comments/',
+  config: {
+    pageComponent: '@/pages/comments',
+    seo: {
+      meta: {
+        structuredData: {
+          jsonLd: {
+            '@context': 'http://schema.org/',
+            '@type': 'Comments',
+          },
+        },
+      },
+    },
+  },
+};
+```
+
+Remember, that `JSON-LD` only generates for server requests, so it won't change on SPA transitions.
 
 ## How-to
 
@@ -303,7 +355,7 @@ type CustomTag = {
     [key: string]: any;
   };
   innerHtml?: string;
-}
+};
 ```
 
 ## Testing
