--- a/docs/03-features/013-seo.md
+++ b/docs/03-features/013-seo.md
@@ -417,3 +417,18 @@ describe('testMetaUpdater', () => {
   });
 });
 ```
+
+## Known issues
+
+### Googlebot crawls and tries to index all links within your HTML
+
+Googlebot will parse everything inside your HTML document, including inline scripts, and even JSON located within those scripts. If Googlebot encounters a link, it might extract and attempt to access these URLs to index them.
+
+When you are developing a Tramvai application, the most common case where this could happen is with the initial state. This initial state is passed from your server to the client inside an inline script with the `__TRAMVAI_STATE__` id. Such initial states can also contain links. More information about state, you can read in [State Management](03-features/08-state-management.md).
+
+Unfortunately, there is no straightforward solution at this moment.
+
+Links:
+
+- https://stackoverflow.com/q/47210596 - stackoverflow discussion
+- https://support.google.com/webmasters/thread/217029647/json-data-in-next-js-app?hl=en - question in google support
