--- a/docs/03-features/013-seo.md
+++ b/docs/03-features/013-seo.md
@@ -182,7 +182,7 @@ createApp({
 
 ### Dynamic meta
 
-For example, your meta depends on API response. [Actions](03-features/09-data-fetching/01-action.md) is a good place to both save response to store and update meta tags by using `META_WALK_TOKEN` токен:
+For example, your meta depends on API response. [Actions](03-features/09-data-fetching/01-action.md) is a good place to both save response to store and update meta tags by using `META_WALK_TOKEN` token:
 
 ```tsx
 import { declareAction } from '@tramvai/core';
@@ -309,6 +309,40 @@ createApp({
       },
     }),
   ],
+});
+```
+
+### How to update meta by user interaction?
+
+`META_WALK_TOKEN` will work only for initial page request and SPA-navigations, this limitation is needed to avoid unexpected behavior due to racing.
+
+If you need to update meta on click or any other user event, use `APPLY_META_TOKEN` token.
+
+:::info
+
+Do not use `APPLY_META_TOKEN` in page actions or before and after SPA-navigations!
+
+:::
+
+Example:
+
+```tsx
+import { declareAction } from '@tramvai/core';
+import { APPLY_META_TOKEN } from '@tramvai/module-seo';
+
+declareAction({
+  name: 'action',
+  fn() {
+    this.deps.applyMeta({
+      title: 'It is last search request data',
+    });
+  },
+  deps: {
+    applyMeta: APPLY_META_TOKEN,
+  },
+  conditions: {
+    onlyBrowser: true,
+  },
 });
 ```
 
