--- a/docs/03-features/017-pwa.md
+++ b/docs/03-features/017-pwa.md
@@ -26,7 +26,7 @@ Main purpose of `InjectManifest` integration is to inject information about appl
 
 Service Worker generation process is integrated with `@tramvai/cli` development server. It means that you don't need always to run `build` command to generate SW, but this behavior is configurable.
 
-For production build, SW will be generated in client build directory with other assets. If you have enabled [modern build](how-to/how-enable-modern.md), then SW will be generated for both modern (with `.modern.js` suffix) and legacy bundles.
+For production build, SW will be generated in client build directory with other assets.
 
 ### Webmanifest
 
