--- a/docs/03-features/013-seo.md
+++ b/docs/03-features/013-seo.md
@@ -136,6 +136,8 @@ You can set additional data source by using the method `SeoModule.forRoot` with 
 
 Each source is a function that takes a meta and allows you to extend the meta through a `updateMeta` call. The priority is a positive number, for each specific meta key the value with the highest priority will be used, the value with priority `0` denotes the default value.
 
+In the second argument of the `updateMeta` method, you can pass any value from the [list of meta tags](#meta-tags-list).
+
 This meta update will be executed for every request for application pages. Possible use-case - read information for meta from some services or stores (this information need to be already fetched, meta updaters are syncronyous).
 
 ```tsx
@@ -292,6 +294,8 @@ And result will be - `<meta name="metaCustomNameAttribute" content="metaCustomCo
 
 Just return `null` as value for highest priority:
 
+Here is the list of available values for the second argument of `updateMeta` - [Meta Tags List](#meta-tags-list).
+
 ```tsx
 import { createApp, provide } from '@tramvai/core';
 import { SeoModule, META_UPDATER_TOKEN, META_PRIORITY_ROUTE } from '@tramvai/module-seo';
@@ -304,7 +308,8 @@ createApp({
       provide: META_UPDATER_TOKEN,
       useValue: (meta) => {
         meta.updateMeta(30, {
-          keywords: null,
+          ogUrl: null,
+          robots: null,
         });
       },
     }),
