--- a/docs/03-features/013-seo.md
+++ b/docs/03-features/013-seo.md
@@ -288,6 +288,30 @@ createApp({
 
 And result will be - `<meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true">`
 
+### How-to remove default robots meta tags?
+
+In some cases, you may not want any robots meta tags to be configured. In such situations, you must manage them manually. To enable this behavior, use robots:skip in updateMeta or APPLY_META_TOKEN. For example:
+
+```tsx
+import { createApp, provide } from '@tramvai/core';
+import { SeoModule, META_UPDATER_TOKEN, META_PRIORITY_ROUTE } from '@tramvai/module-seo';
+
+createApp({
+  name: 'tincoin',
+  modules: [SeoModule],
+  providers: [
+    provide({
+      provide: META_UPDATER_TOKEN,
+      useValue: (meta) => {
+        meta.updateMeta(30, {
+          robots: 'skip',
+        });
+      },
+    }),
+  ],
+});
+```
+
 ### How-to remove meta tag?
 
 Just return `null` as value for highest priority:
@@ -376,7 +400,7 @@ Predefined list for easy adding meta tags:
 - `twitterCreator` - `<meta name="twitter:creator">` tag
 - `twitterImage` - `<meta name="twitter:image">` tag
 - `twitterImageAlt` - `<meta name="twitter:image:alt">` tag
-- `robots` - function with parameters `(type: 'all' | 'noindex' | 'nofollow' | 'none')` which returns `<meta name="robots" content="none">`, `<meta name="robots" content="noindex, nofollow">` or `<meta name="robots" content="noarchive">` tag
+- `robots` - function with parameters `(type: 'all' | 'noindex' | 'nofollow' | 'none' | 'skip')` which returns `<meta name="robots" content="none">`, `<meta name="robots" content="noindex, nofollow">` or `<meta name="robots" content="noarchive">` or nothing if you will choose `skip` option
 
 ### Custom meta tags
 
